--- a/animated cards/index.html
+++ b/animated cards/index.html
@@ -1,118 +1,14 @@
 <html>
     <head>
         <link rel="stylesheet" href="/style.css">
-        <style>
-
-        body{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-
-@property --color1 {
-        syntax: '<color>';
-        initial-value: #ffeb3b;
-        inherits: false;
-}
-@property --color2 {
-        syntax: '<color>';
-        initial-value: #fbc02d;
-        inherits: false;
-}
-            .skill-card {
-  width: 300px;
-  height: 400px;
-  position: relative;
-  overflow: hidden;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-}
-
-.background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: linear-gradient(to top, var(--color1), var(--color2)); /* Sunny background */
-  transition: --color1 0.5s ease-in-out, --color2 0.3s ease-in-out;
-  overflow: hidden;
-}
-
-.skill-card:hover .background {
-    --color1: #0d47a1;
-    --color2: #000000;
-}
-
-.sun, .moon {
-  position: relative;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  transition: all 0.3s ease-in-out;
-}
-
-.sun {
-  background-color: yellow;
-  top: 200px;
-  left: 50px;
-  opacity: 1;
-  transform: rotate(90deg) translateX(-175px) rotate(-90deg);
-}
-
-.moon {
-  background-color: white;
-  top: 100px;
-  left: 200px;
-  opacity: 0;
-  transform: rotate(0deg) translateX(125px) rotate(0deg);
-  transition: all 0.3s ease-in-out;
-}
-
-.skill-card:hover .sun{
-    opacity: 0;
-    transform: rotate(0deg) translateX(-125px) rotate(0deg);
-}
-
-.skill-card:hover .moon {
-  opacity: 1;
-  transform: rotate(-90deg) translateX(125px) rotate(90deg);
-}
-
-.content {
-  position: relative;
-  z-index: 10;
-  padding: 20px;
-  color: black;
-  text-align: center;
-  transition: color 0.3s ease-in-out;
-  transform: translateY(50px);
-}
-
-.skill-card:hover .content {
-  color: white;
-}
-
-.skill-card .background .night-bg{
-    opacity: 0;
-    transform: translateY(15dvh);
-    transition: all 0.3s ease-in-out;
-}
-
-.skill-card:hover .night-bg{
-    opacity: 1;
-    transform: translateY(9dvh);
-}
-
-        </style>
     </head>
 
     <body>
         <div class="skill-card">
             <div class="background">
-                <div class="sun"></div>
-                <div class="moon"></div>
+              <span class="star star1"></span>
+                <div class="sun"><img src="/sun.png" /></div>
+                <div class="moon"><img src="/moon.png" /></div>
                 <img class="night-bg" src="/trees-m.webp"/>
             </div>
         </div>
