completed stars styling and animations

--- a/animated cards/index.html
+++ b/animated cards/index.html
@@ -6,10 +6,26 @@
     <body>
         <div class="skill-card">
             <div class="background">
-              <span class="star star1"></span>
-                <div class="sun"><img src="/sun.png" /></div>
-                <div class="moon"><img src="/moon.png" /></div>
-                <img class="night-bg" src="/trees-m.webp"/>
+              <div class="star-bg">
+                <span class="shooting-star"></span>
+                <span class="shooting-star shooting-star2"></span>
+                <span class="star star1"></span>
+                <span class="star star2"></span>
+                <span class="star star3"></span>
+                <span class="star star4"></span>
+                <span class="star star5"></span>
+                <span class="star star6"></span>
+                <span class="star star7"></span>
+                <span class="star star8"></span>
+                <span class="star star9"></span>
+                <span class="star star10"></span>
+                <span class="star star11"></span>
+                <span class="star star12"></span>
+                <span class="star star13"></span>
+              </div>
+              <div class="sun"><img src="/sun.png" /></div>
+              <div class="moon"><img src="/moon.png" /></div>
+              <img class="night-bg" src="/trees-m.webp"/>
             </div>
         </div>
     </body>
