--- a/animated cards/index.html
+++ b/animated cards/index.html
@@ -6,6 +6,11 @@
     <body>
         <div class="skill-card">
             <div class="background">
+              <div class="cloud-bg">
+                <div class="cloud cloud-1"></div>
+                <div class="cloud cloud-2"></div>
+                <div class="cloud cloud-3"></div>
+              </div>
               <div class="star-bg">
                 <span class="shooting-star"></span>
                 <span class="shooting-star shooting-star2"></span>
@@ -25,7 +30,8 @@
               </div>
               <div class="sun"><img src="/sun.png" /></div>
               <div class="moon"><img src="/moon.png" /></div>
-              <img class="night-bg" src="/trees-m.webp"/>
+              <img class="light-bg" src="/palm.png"/>
+              <img class="dark-bg" src="/trees-m.webp"/>
             </div>
         </div>
     </body>
