--- a/animated cards/index.html
+++ b/animated cards/index.html
@@ -4,7 +4,8 @@
     </head>
 
     <body>
-        <div class="skill-card">
+      <div class="card-container">
+        <div class="skill-card card1">
             <div class="background">
               <div class="cloud-bg">
                 <div class="cloud cloud-1"></div>
@@ -34,5 +35,10 @@
               <img class="dark-bg" src="/trees-m.webp"/>
             </div>
         </div>
+        <div class="skill-card card2">
+          <img class="card2-bg" src="h1.png"/>
+          <div class="content"></div>
+        </div>
+      </div>
     </body>
 </html>
