3D card flip effect

--- a/animated cards/index.html
+++ b/animated cards/index.html
@@ -8,11 +8,14 @@
         <div class="skill-card card1">
             <div class="background">
               <div class="cloud-bg">
+                <div class="sun"><img src="/sun.png" /></div>
                 <div class="cloud cloud-1"></div>
                 <div class="cloud cloud-2"></div>
                 <div class="cloud cloud-3"></div>
+                <img class="light-bg" src="/palm.png"/>
               </div>
               <div class="star-bg">
+                <div class="moon"><img src="/moon.png" /></div>
                 <span class="shooting-star"></span>
                 <span class="shooting-star shooting-star2"></span>
                 <span class="star star1"></span>
@@ -28,17 +31,53 @@
                 <span class="star star11"></span>
                 <span class="star star12"></span>
                 <span class="star star13"></span>
+                <img class="dark-bg" src="/trees-m.webp"/>
               </div>
-              <div class="sun"><img src="/sun.png" /></div>
-              <div class="moon"><img src="/moon.png" /></div>
-              <img class="light-bg" src="/palm.png"/>
-              <img class="dark-bg" src="/trees-m.webp"/>
             </div>
         </div>
         <div class="skill-card card2">
           <img class="card2-bg" src="h1.png"/>
           <div class="content"></div>
         </div>
+        <div class="card-3d-wrap mx-auto">
+          <div class="card-3d-wrapper">
+            <div class="card-front">
+              <div class="background">
+                <div class="cloud-bg">
+                  <div class="sun"><img src="/sun.png" /></div>
+                  <div class="cloud cloud-1"></div>
+                  <div class="cloud cloud-2"></div>
+                  <div class="cloud cloud-3"></div>
+                  <img class="light-bg" src="/palm.png"/>
+                </div>
+              </div>
+            </div>
+            <div class="card-back">
+              <div class="background">
+                <div class="star-bg">
+                  <div class="moon"><img src="/moon.png" /></div>
+                  <span class="shooting-star"></span>
+                  <span class="shooting-star shooting-star2"></span>
+                  <span class="star star1"></span>
+                  <span class="star star2"></span>
+                  <span class="star star3"></span>
+                  <span class="star star4"></span>
+                  <span class="star star5"></span>
+                  <span class="star star6"></span>
+                  <span class="star star7"></span>
+                  <span class="star star8"></span>
+                  <span class="star star9"></span>
+                  <span class="star star10"></span>
+                  <span class="star star11"></span>
+                  <span class="star star12"></span>
+                  <span class="star star13"></span>
+                  <img class="dark-bg" src="/trees-m.webp"/>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       </div>
     </body>
 </html>
