--- a/3d cards/index.html
+++ b/3d cards/index.html
@@ -1,45 +1,77 @@
 <html>
     <head>
-        <link rel="stylesheet" href="/card.css">
+        <style>
+       /* Container with perspective applied */
+.card-container {
+  perspective: 1000px;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+.card {
+  width: 300px;
+  height: 200px;
+  position: relative;
+  transform-style: preserve-3d;  /* Ensures 3D elements are properly rendered */
+  transition: transform 0.8s ease-in-out;  /* Smooth transition for flipping */
+}
+
+.card-front,
+.card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  transform-style: preserve-3d;  /* Ensure the content inside respects the 3D effect */
+}
+
+.card-front {
+  background-color: lightblue;
+  color: #000;
+}
+
+.card-back {
+  background-color: lightcoral;
+  color: #fff;
+  transform: rotateY(180deg);
+}
+
+/* 3D Text Styles */
+h2, p {
+  font-family: 'Arial', sans-serif;
+  font-size: 24px;
+  color: #fff;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6),   /* Basic shadow for depth */
+               4px 4px 8px rgba(0, 0, 0, 0.4),   /* Additional shadow layers */
+               6px 6px 12px rgba(0, 0, 0, 0.2);  /* Deeper shadow for stronger 3D effect */
+  transform: translateZ(100px);
+}
+.card-container:hover .card {
+  transform: rotateY(180deg);  /* Flip the card when hovered */
+}
+        </style>
     </head>
     <body>
-        <div class="card-3d-wrap mx-auto">
-            <div class="card-3d-wrapper">
-                <div class="card-front">
-                    <div class="background">
-                        <div class="cloud-bg">
-                            <div class="sun"><img src="/sun.png" /></div>
-                            <div class="cloud cloud-1"></div>
-                            <div class="cloud cloud-2"></div>
-                            <div class="cloud cloud-3"></div>
-                            <img class="light-bg" src="/palm.png"/>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-back">
-                    <div class="background">
-                        <div class="star-bg">
-                            <div class="moon"><img src="/moon.png" /></div>
-                            <span class="shooting-star"></span>
-                            <span class="shooting-star shooting-star2"></span>
-                            <span class="star star1"></span>
-                            <span class="star star2"></span>
-                            <span class="star star3"></span>
-                            <span class="star star4"></span>
-                            <span class="star star5"></span>
-                            <span class="star star6"></span>
-                            <span class="star star7"></span>
-                            <span class="star star8"></span>
-                            <span class="star star9"></span>
-                            <span class="star star10"></span>
-                            <span class="star star11"></span>
-                            <span class="star star12"></span>
-                            <span class="star star13"></span>
-                            <img class="dark-bg" src="/trees-m.webp"/>
-                        </div>
-                    </div>
-                </div>
+        <div class="card-container">
+            <div class="card">
+              <div class="card-front">
+                <h2>My Skills</h2>
+                <p>Front side content (e.g., skill categories)</p>
+              </div>
+              <div class="card-back">
+                <h2>Skills Details</h2>
+                <p>Back side content (e.g., specific skills)</p>
+              </div>
             </div>
-        </div>
+          </div>
+          
     </body>
 </html>
