Python script to copy subfolder files into one folder

--- a/3d cards/index.html
+++ b/3d cards/index.html
@@ -12,7 +12,10 @@
                   <img src="cloud.png" class="cloud-2" />
                   <img src="cloud.png" class="cloud-3" />
                 </div>
-                <img class="light-bg" src="palm.png"/>
+                <!-- <img class="light-bg" src="palm.png"/> -->
+                <div class="spline3d">
+                  <spline-viewer url="https://prod.spline.design/8ufiLYY9QjwSlseN/scene.splinecode"></spline-viewer>
+                </div>
               </div>
               <div class="card-back">
                 <div class="moon"><img src="moon.png" /></div>
@@ -39,4 +42,6 @@
           </div>
           
     </body>
+    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.30/build/spline-viewer.js"></script>
+
 </html>
